Fixed stadistics typo
